// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. video 1`] = `
<View
  accessibilityLabel="Video Splash"
  focusable={true}
  testID="splash-component"
>
  <View>
    <Image
      aspectRatio={1.5}
      uri="b9a31d3949b1882a09ed2f8508d538f3"
    />
    <View>
      <View>
        <RNSVGSvgView
          align="xMidYMid"
          aria-label="icon-play"
          bbHeight={70}
          bbWidth={70}
          focusable={false}
          height={70}
          meetOrSlice={0}
          minX={0}
          minY={0}
          vbHeight={100}
          vbWidth={100}
          width={70}
        >
          <RNSVGGroup>
            <RNSVGRect
              fill={4278190080}
              fillOpacity={0.4}
              height="100"
              propList={
                Array [
                  "fill",
                  "fillOpacity",
                ]
              }
              width="100"
              x="0"
              y="0"
            />
            <RNSVGPath
              d="M30 20 70 50 30 80z"
              fill={4294967295}
              propList={
                Array [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
  </View>
</View>
`;

exports[`2. video without a poster image 1`] = `
<View
  accessibilityLabel="Video Splash"
  focusable={true}
  testID="splash-component"
>
  <View>
    <View />
    <View>
      <View>
        <RNSVGSvgView
          align="xMidYMid"
          aria-label="icon-play"
          bbHeight={70}
          bbWidth={70}
          focusable={false}
          height={70}
          meetOrSlice={0}
          minX={0}
          minY={0}
          vbHeight={100}
          vbWidth={100}
          width={70}
        >
          <RNSVGGroup>
            <RNSVGRect
              fill={4278190080}
              fillOpacity={0.4}
              height="100"
              propList={
                Array [
                  "fill",
                  "fillOpacity",
                ]
              }
              width="100"
              x="0"
              y="0"
            />
            <RNSVGPath
              d="M30 20 70 50 30 80z"
              fill={4294967295}
              propList={
                Array [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
  </View>
</View>
`;

exports[`3. 360 video 1`] = `
<View
  accessibilityLabel="Video Splash"
  focusable={true}
  testID="splash-component"
>
  <View>
    <Image
      aspectRatio={1.5}
      uri="b9a31d3949b1882a09ed2f8508d538f3"
    />
    <View>
      <View>
        <RNSVGSvgView
          align="xMidYMid"
          aria-label="icon-play"
          bbHeight={70}
          bbWidth={70}
          focusable={false}
          height={70}
          meetOrSlice={0}
          minX={0}
          minY={0}
          vbHeight={100}
          vbWidth={100}
          width={70}
        >
          <RNSVGGroup>
            <RNSVGRect
              fill={4278190080}
              fillOpacity={0.4}
              height="100"
              propList={
                Array [
                  "fill",
                  "fillOpacity",
                ]
              }
              width="100"
              x="0"
              y="0"
            />
            <RNSVGPath
              d="M30 20 70 50 30 80z"
              fill={4294967295}
              propList={
                Array [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
  </View>
</View>
`;
